--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jstransformer-foo",
-  "version": "0.0.0",
-  "description": "Foo support for JSTransformers.",
+  "name": "jstransformer-prettier",
+  "version": "0.0.1",
+  "description": "Prettier support for JSTransformers.",
   "keywords": [
     "jstransformer"
   ],
@@ -22,11 +22,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jstransformers/jstransformer-foo.git"
+    "url": "https://github.com/jstransformers/jstransformer-prettier.git"
   },
   "author": {
     "name": "JSTransformers Team",
     "url": "http://github.com/orgs/jstransformers/people"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "extend-shallow": "^2.0.1",
+    "prettier": "^0.13.1"
+  }
 }
